[metadata]
name = PyINSECT
version = 0.0.39
url = https://github.com/npit/PyINSECT
license = LGPL
author = George Giannakopoulos
author_email = ggianna@iit.demokritos.gr
description = A python port of the JInsect toolkit
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3,
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL),
    Operating System :: OS Independent,

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6

install_requires =
    networkx>=2.5.1
    matplotlib<=3.1.1
    pydot>=1.4.2
    pydotplus>=2.0.2
    pygraphviz>=1.7

[options.extras_require]
dev =
    flake8
    isort
    black
    pre-commit
    concurrent_log_handler

[options.packages.find]
where = src

[isort]
profile=black
src_paths=src,tests
