[metadata]
name = PyINSECT
version = 0.0.39
url = https://github.com/ggianna/PyINSECT
license = Apache License 2.0 (Apache-2.0)
author = George Giannakopoulos
author_email = ggianna@iit.demokritos.gr
description = A python port of the JInsect toolkit, bringing the power of n-gram graph representation and operators to the python setting for natural language processing and machine learning tasks.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3,
    License :: OSI Approved :: Apache Software License,
    Operating System :: OS Independent,

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6

install_requires =
    networkx>=2.5.1
    pydot>=1.4.2
    pydotplus>=2.0.2

[options.extras_require]
dev =
    flake8
    isort
    black
    pre-commit
    concurrent_log_handler
viz =
    pygraphviz>=1.7
    matplotlib<=3.1.1

[options.packages.find]
where = src

[isort]
profile=black
src_paths=src,tests
